crates/pixi-build-cmake/src/snapshots/pixi_build_cmake__build_script__test__build_script@unix-python-no-extra-args.snap
---
source: crates/pixi-build-cmake/src/build_script.rs
expression: script
---
ninja --version
cmake --version

mkdir -p build
pushd build

if [ ! -f "build.ninja" ]; then
    cmake $CMAKE_ARGS \
        -GNinja \
        -S "my-prefix-dir" \
        -DCMAKE_BUILD_TYPE=Release \
        -DCMAKE_INSTALL_PREFIX=$PREFIX \
        -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
        -DBUILD_SHARED_LIBS=ON \
        -DPython_EXECUTABLE=$PYTHON
fi

cmake --build . --target install
